# RayTrace

./: CMakeLists.txt  Canvas.cpp  KdTree.h  Kdtree.cpp  README.md  RayTrace.sln  RayTrace.vcxproj  RayTrace.vcxproj.filters  canvas.h  foundation.h  main.cpp  object.cpp  object.h
include/: canvas.h  foundation.h  kdtree.h  object.h
src/: canvas.cpp  kdtree.cpp  main.cpp  object.cpp
